# easyrag

./: .envrc  .gitignore  README.md  pyproject.toml
misc/: typingmind.py
src/llm_rag/: __init__.py  ingest.py  search.py  stats.py  types.py  typingmind.py
